--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,32 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.index-area {
+  min-width: 400px;
+  max-width: 500px;
+  white-space: pre-line;
+  padding-bottom: 200px;
+}
+
+.space-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.space-20 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.inline-space-5 {
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 5px;
+}
